--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    
-    <title>ToDo App with local storage</title>
+    <title>ToDo-App</title>
     <style>
         body{
             margin: 0;
